# CUDA-Raytracing

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: camera.cuh  cuda_utils.cuh  hittable.cuh  material.cuh  renderer.cuh  sphere.cuh  vec3.cuh
include/math/: ray.cuh
include/render/: material.cuh  renderer.cuh
include/scene/: camera.cuh  hittable.cuh  plane.cuh  rect.cuh  sphere.cuh
src/: main.cpp  renderer.cu
